[package]
name = "artisan"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Flash OS images to SD cards and USB drives, safely and easily."

[[bin]]
name = "artisan"
path = "src/main.rs"

[dependencies]
crepuscularity-gpui = { path = "../crepuscularity/crates/crepuscularity-gpui" }
gpui = { version = "=0.2.2", default-features = false, features = ["font-kit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
walkdir = "2"
regex = "1"
rfd = "0.15"
plist = "1.7"
sha2 = "0.11"
flate2 = "1"
notify-rust = "4"
bzip2 = "0.5"
xz2 = "0.1"
zip = "2"
libc = "0.2"
